Added all paths for pages in AppShell.xaml; Added simple layout in all files; Added search bar in MovieListPage and simple logic; Added button for dark/light theme;

--- a/MovieExplorer/Pages/MovieDetailsPage.xaml
+++ b/MovieExplorer/Pages/MovieDetailsPage.xaml
@@ -5,7 +5,7 @@
              Title="MovieDetailsPage">
     <VerticalStackLayout>
         <Label 
-            Text="Welcome to .NET MAUI!"
+            Text="Movie Details Page"
             VerticalOptions="Center" 
             HorizontalOptions="Center" />
     </VerticalStackLayout>
