--- a/MovieExplorer/Pages/SettingsPage.xaml
+++ b/MovieExplorer/Pages/SettingsPage.xaml
@@ -1,12 +1,17 @@
-<?xml version="1.0" encoding="utf-8" ?>
-<ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="MovieExplorer.Pages.SettingsPage"
-             Title="SettingsPage">
-    <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
+<ContentPage
+    xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    x:Class="MovieExplorer.Pages.SettingsPage"
+    Title="Settings"
+    Padding="20">
+
+    <VerticalStackLayout Spacing="25">
+
+        <!-- dark/light theme -->
+        <HorizontalStackLayout Spacing="15">
+            <Label Text="Dark Theme" FontSize="18" VerticalOptions="Center" />
+            <Switch x:Name="ThemeSwitch" Toggled="OnThemeToggled"/>
+        </HorizontalStackLayout>
+
     </VerticalStackLayout>
 </ContentPage>
