--- a/MovieExplorer/Pages/MainPage.xaml
+++ b/MovieExplorer/Pages/MainPage.xaml
@@ -1,12 +1,20 @@
-<?xml version="1.0" encoding="utf-8" ?>
-<ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="MovieExplorer.Pages.MainPage"
-             Title="MainPage">
-    <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
+<ContentPage
+    xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    x:Class="MovieExplorer.Pages.MainPage"
+    BackgroundColor="white"
+    Padding="40">
+
+    <VerticalStackLayout Spacing="30" VerticalOptions="Center">
+
+        <!-- title -->
+        <Label Text="Absolute Cinema"
+               HorizontalOptions="Center"
+               FontFamily="Helvetica"
+               FontSize="36"
+               FontAttributes="Bold"
+               TextColor="black" />
+
     </VerticalStackLayout>
+
 </ContentPage>
