--- a/MovieExplorer/Pages/MainPage.xaml
+++ b/MovieExplorer/Pages/MainPage.xaml
@@ -2,7 +2,7 @@
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     x:Class="MovieExplorer.Pages.MainPage"
-    BackgroundColor="white"
+    BackgroundColor="{DynamicResource PageBackgroundColor}"
     Padding="40">
 
     <VerticalStackLayout Spacing="30" VerticalOptions="Center">
@@ -13,7 +13,36 @@
                FontFamily="Helvetica"
                FontSize="36"
                FontAttributes="Bold"
-               TextColor="black" />
+               TextColor="{DynamicResource PrimaryTextColor}" />
+
+        <!-- message in login bar -->
+        <Label Text="Enter your username to continue"
+               HorizontalOptions="Center"
+               FontSize="16"
+               TextColor="{DynamicResource PrimaryTextColor}" />
+
+        <!-- entry -->
+        <Entry x:Name="NameEntry"
+               Placeholder="Username"
+               HorizontalOptions="Center"
+               WidthRequest="220"
+               FontSize="18"
+               BackgroundColor="#FFFFFF"
+               TextColor="Black"
+               PlaceholderColor="Gray"
+               Margin="0,10"/>
+
+        <!-- login button -->
+        <Button Text="Login"
+                Clicked="OnLogin"
+                WidthRequest="140"
+                HeightRequest="42"
+                HorizontalOptions="Center"
+                BackgroundColor="#FF8800"
+                TextColor="Black"
+                CornerRadius="16"
+                FontAttributes="Bold"
+                />
 
     </VerticalStackLayout>
 
