--- a/MovieExplorer/Pages/MovieDetailsPage.xaml
+++ b/MovieExplorer/Pages/MovieDetailsPage.xaml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
@@ -22,6 +21,11 @@
         <Label x:Name="YearLabel"   FontSize="20"/>
         <Label x:Name="GenreLabel"  FontSize="18"/>
         <Label x:Name="RatingLabel" FontSize="18"/>
+
+        <!-- fav button -->
+        <Button x:Name="FavButton"
+                Margin="0,20,0,0"
+                Clicked="OnToggleFavourite"/>
     </VerticalStackLayout>
 
 </ContentPage>
